tests/rosetta/out/Smalltalk/associative-array-merging.out
/tmp/associative-array-merging.st:5: parse error, expected ']'
