tests/rosetta/out/Smalltalk/associative-array-merging.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| merge result k main base update |
merge := [:base :update | result := Dictionary from:{}.
base do: [:k |.
result at: k put: base at: k.
].
.
update do: [:k |.
result at: k put: update at: k.
].
.
result. ].
main := [ base := Dictionary from:{'name'->('Rocket Skates'). 'price'->12.75. 'color'->'yellow'}.
update := Dictionary from:{'price'->15.25. 'color'->'red'. 'year'->1974}.
result := merge value: base value: update.
Transcript show: (result) printString; cr. ].
main value.
